# mojentic-ru

./: .clippy.toml  .gitignore  .hone-gates.json  AGENTS.md  CHANGELOG.md  CHARTER.md  Cargo.toml  EXTENDING.md  FILE_MANAGER_MIGRATION.md  IMPLEMENTATION.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  RUST_IMPLEMENTATION_ANALYSIS.md  deny.toml  fix_file_manager_complete.py  fix_tools.py  rustfmt.toml  tarpaulin.toml
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: build.yml
audit/: maintain-2026-05-09-080641-actions.md  maintain-2026-05-09-080725-actions.md  maintain-2026-05-09-080740-actions.md  maintain-2026-05-09-080752-actions.md  maintain-2026-05-09-080808-actions.md  maintain-2026-05-10-054823-actions.md  maintain-2026-05-11-043517-actions.md  maintain-2026-05-12-043739-actions.md  maintain-2026-05-13-042622-actions.md  maintain-2026-05-14-034528-actions.md  maintain-2026-05-15-053825-actions.md  maintain-2026-05-16-084702-actions.md  maintain-2026-05-17-042337-actions.md  maintain-2026-06-08-031900-actions.md  maintain-2026-06-09-033427-actions.md  maintain-2026-06-10-034135-actions.md  maintain-2026-06-13-033753-actions.md  maintain-2026-06-13-035242-actions.md  maintain-2026-06-17-051623-actions.md  maintain-2026-06-26-024428-actions.md
book/: book.toml
book/book/: 404.html  api.html  broker.html  get_started.html  index.html  print.html  quick-reference.html  searchindex.js  toc.html  toc.js
book/src/: SUMMARY.md  api.md  async_agents.md  broker.md  get_started.md  index.md  parallel_tools.md  quick-reference.md  realtime.md  tracer.md
coverage/: tarpaulin-report.html
examples/: README.md  async_llm.rs  broker_as_tool.rs  broker_examples.rs  chat_session.rs  chat_session_with_tool.rs  coding_file_tool.rs  current_datetime.rs  embeddings.rs  ephemeral_task_manager.rs  file_tool.rs  image_analysis.rs  iterative_solver.rs  list_models.rs  react.rs  recursive_agent.rs  simple_llm.rs  solver_chat_session.rs  streaming.rs  structured_output.rs  tell_user.rs  tokenizer_example.rs  tool_usage.rs  tracer_demo.rs  web_search.rs  working_memory.rs
guide/: book.toml
guide/src/: SUMMARY.md  api-core.md  api-gateways.md  api-tools.md  architecture.md  best-practices.md  broker.md  contributing.md  error-handling.md  getting-started.md  introduction.md  structured-output.md  testing.md  tool-usage.md
src/: async_dispatcher.rs  error.rs  event.rs  lib.rs  router.rs
src/agents/: async_aggregator_agent.rs  async_llm_agent.rs  base_agent.rs  base_async_agent.rs  iterative_problem_solver.rs  mod.rs  simple_recursive_agent.rs
src/context/: mod.rs  shared_working_memory.rs
src/examples/: mod.rs
src/llm/: broker.rs  chat_session.rs  gateway.rs  mod.rs  models.rs
src/realtime/: broker.rs  codec.rs  config.rs  events.rs  (+6 more)
tests/: openai_tool_round_trip.rs
(+94 files in other folders)
